@@ -86,7 +86,7 @@ bool default_map_generator::allow_user_config() const { return true; }
 
 void default_map_generator::user_config(display& disp)
 {
-	const events::resize_lock prevent_resizing;
+	const resize_lock prevent_resizing;
 	const events::event_context dialog_events_context;
 
 	CVideo& screen = disp.video();
