@@ -12,7 +12,7 @@
 */
 
 #include "global.hpp"
-
+#include "events.hpp"
 #include "filesystem.hpp"
 #include "game_config.hpp"
 #include "game_preferences.hpp"
@@ -461,6 +461,17 @@ void stop_UI_sound() {
 			}
 		}
 	}
+}
+
+namespace {
+	class music_thinker : public events::pump_monitor {
+		void process(events::pump_info &/*info*/) {
+			if(preferences::music_on()) {
+				think_about_music();
+			}
+		}
+	};
+	music_thinker mthink;
 }
 
 void think_about_music(void)
