@@ -7,7 +7,8 @@ Version 1.3.6+svn:
  * language and i18n:
    * updated translations: Danish, Japanese, Swedish
  * multiplayer:
-   * improvements to the sound of the timer countdown
+   * improvements to the sound of the countdown timer
+   * the countdown timer alert can now start sounding while dialogs are open
    * unit descriptions are no longer evaluated for the recruitment checksum
      and thus avoiding an OOS error when different languages are used. 
      The change is incompatible with older trunk versions fixes (bug #9472).
